tests/NormalTests/paczka1/small_fuzzy/50104724.err
Error in line 1: kqyv A445 94,3
Error in line 4: nLPBjV A445 37,8
